changed resource URL for serving on gh-pages

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,18 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Svelte app</title>
-
+<!--  Use this code when serving from root folder
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-	<link rel="stylesheet" href="/build/extra_libs.css" />
+	<link rel="stylesheet" href="/build/extra_libs.css" /> -->
 
-	<script defer src='/build/bundle.js'></script>
+	<link rel='icon' type='image/png' href='/Simple-ELO-webb-app/favicon.png'>
+	<link rel='stylesheet' href='/Simple-ELO-webb-app/global.css'>
+	<link rel='stylesheet' href='/Simple-ELO-webb-app/build/bundle.css'>
+	<link rel="stylesheet" href="/Simple-ELO-webb-app/build/extra_libs.css" />
+
+	<script defer src='/Simple-ELO-webb-app/build/bundle.js'></script>
 </head>
 
 <body>
